fix safari scrollbar bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,3 +89,13 @@ dialog:modal {
     transform: rotate(360deg);
   }
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;  /* Chrome, Safari and Opera */
+  }
+}
